# linkchain

./: .cursorignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_COVERAGE_REPORT.md  debug_test.rs
docs/: 挂件链使用方法说明.md  调用链设计.md
scripts/: run_comprehensive_tests.sh  userInput.py
src/: lib.rs
src/builtin/: condition.rs  extract_json.rs  extract_map.rs  extract_sql.rs  ip_blacklist.rs  ip_whitelist.rs  json_extract.rs  logger.rs  map_fields.rs  merge.rs  mod.rs  regexp_condition.rs  regexp_extract.rs  registry.rs
src/chain/: executor.rs  mod.rs
src/chainware/: config.rs  core.rs  mod.rs
src/core/: context.rs  mod.rs  status.rs  utils.rs
src/types/: mod.rs
src/utils/: ip_utils.rs  json_path.rs  mod.rs
tests/: common.rs  mod.rs  test_condition_chainwares.rs  test_data_processing_chainwares.rs  test_extract_chainwares.rs  test_integration_scenarios.rs  test_ip_filter_chainwares.rs
