[package]
name = "linkchain"
version = "0.1.0"
edition = "2021"
authors = ["LinkChain Team"]
description = "轻量级调用链执行器"
license = "MIT"
repository = "https://github.com/linkchain/linkchain"
keywords = ["chain", "executor", "middleware", "pipeline"]
categories = ["development-tools", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
jsonpath-rust = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "linkchain"
path = "src/lib.rs"